# rust-mandelbrot

./: .gitignore  Cargo.toml  README.md
src/: complex.rs  main.rs  utils.rs
src/tests/: tests.rs
tests/: integration.rs
