[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
complex = "0.8.0"
crossbeam = "0.8.4"
features = "0.10.0"
image = "0.13.0"
num = "0.4.2"
num_cpus = "1.16.0"
picture = "0.2.0"
